# collabserver-grapheditor

./: .gitignore  .gitmodules  .todo  .travis.yml  CMakeLists.txt  Doxyfile  README.md  build.sh
CMake/: AddDependencies.cmake  AddGrapheditor.cmake  AddGraphiceditor.cmake  AddMvk.cmake
CMake/Dependencies/: AddCollabClient.cmake  AddCollabData.cmake  AddCollabclient.cmake  AddCollabcommon.cmake  AddCollabdata.cmake
CMake/ExternalProjects/: AddClientInterface.cmake  AddCollabClient.cmake  AddCollabdata.cmake  CollabClient.cmake  CollabData.cmake  Collabclient.cmake  Collabcommon.cmake  Collabdata.cmake
client/src/: main.cpp
database/src/: main.cpp
grapheditor/include/: Command.h  CommandInfo.h  CommandInfoPool.h  Editor.h  Global.h  SimpleGraphOperationHandler.h  SimpleGraphOperationObserver.h  utils.h
grapheditor/include/Commands/: AttributeAdd.h  AttributeCommands.h  AttributeRemove.h  AttributeSet.h  Command.h  CommandFactory.h  ConnectCommand.h  EdgeAddCommand.h  EdgeCommands.h  EdgeRemoveCommand.h  GraphCloseCommand.h  GraphCommands.h  GraphDeleteCommand.h  GraphDisplay.h  GraphDisplayCommand.h  GraphListCommand.h  GraphNewCommand.h  GraphOpenCommand.h  HelpCommand.h  QuitCommand.h  UserCommands.h  VertexAddCommand.h  VertexCommands.h  VertexEditCommand.h  VertexInfoCommand.h  VertexListCommand.h  VertexRemoveCommand.h
grapheditor/resources/: commands.csv
grapheditor/src/: CommandInfoPool.cpp  Editor.cpp  SimpleGraphOperationHandler.cpp  SimpleGraphOperationObserver.cpp  main.cpp  utils.cpp
grapheditor/src/Commands/: AttributeAdd.cpp  AttributeCommands.cpp  AttributeRemove.cpp  AttributeSet.cpp  ConnectCommand.cpp  EdgeAddCommand.cpp  EdgeCommands.cpp  EdgeRemoveCommand.cpp  GraphCloseCommand.cpp  GraphCommands.cpp  GraphDeleteCommand.cpp  GraphDisplay.cpp  GraphDisplayCommand.cpp  GraphListCommand.cpp  GraphNewCommand.cpp  GraphOpenCommand.cpp  HelpCommand.cpp  QuitCommand.cpp  UserCommands.cpp  VertexAddCommand.cpp  VertexCommands.cpp  VertexEditCommand.cpp  VertexInfoCommand.cpp  VertexListCommand.cpp  VertexRemoveCommand.cpp
grapheditor/tools/: genSimpleGraph.py
include/: Global.h
include/editor/: Command.h  CommandInfo.h  CommandInfoPool.h  Editor.h
include/editor/commands/: AttributeCommands.h  EdgeCommands.h  GraphCommands.h  UserCommands.h  VertexCommands.h
include/mvk/: MvkWrapper.h  SGraphOpHandlerMVK.h
include/sgraph/: SGraphDebugObserver.h  SGraphDebugOpHandler.h  SGraphMvkMapper.h  SGraphMvkObserver.h  SGraphMvkOpHandler.h
include/utils/: UUIDTools.h  cJSON.h  constants.h  utils.h
mvk/: Doxyfile  Makefile  README.md
mvk/include/: DatabaseObserver.h  DatabaseOperationHandler.h  DatabaseSimpleGraphOperationHandler.h  Global.h  MVKGlobal.h  MVKSimpleGraphOperationHandler.h  MVKWrapper.h  Messaging.h  Prompt.h  SGraphMVKMapper.h  SGraphOpHandlerMVK.h  UuidGenerator.h
mvk/src/: DatabaseObserver.cpp  DatabaseSimpleGraphOperationHandler.cpp  MVKSimpleGraphOperationHandler.cpp  MVKWrapper.cpp  Prompt.cpp  SGraphMVKMapper.cpp  SGraphOpHandlerMVK.cpp  UUIDGenerator.cpp  UuidGenerator.cpp  main.cpp
mvk/src/cpp/: MVKWrapper.cpp  Prompt.cpp  main.cpp
mvk/src/include/: MVKWrapper.h
mvk/tests/: Test_MVKWrapper.cpp
resources/: commands.csv
src/: Global.h  main.cpp
src/debug/: SimpleGraphDebugObserver.h  SimpleGraphDebugOpHandler.cpp  SimpleGraphDebugOpHandler.h
src/editor/: Command.h  CommandInfo.h  CommandInfoPool.cpp  CommandInfoPool.h  Editor.cpp  Editor.h
src/editor/commands/: AttributeCommands.cpp  EdgeCommands.cpp  GraphCommands.cpp  UserCommands.cpp  UserCommands.h  VertexCommands.cpp  VertexCommands.h
src/mvk/: MVKWrapper.cpp  Messaging.h  MvkWrapper.cpp  MvkWrapper.h  SGraphMVKMapper.cpp  SGraphOpHandlerMVK.cpp  SimpleGraphMvkMapper.cpp  SimpleGraphMvkMapper.h  SimpleGraphMvkObserver.h  SimpleGraphMvkOpHandler.cpp  SimpleGraphMvkOpHandler.h
src/sgraph/: SGraphDebugObserver.h  SGraphDebugOpHandler.cpp  SGraphMvkMapper.cpp  SGraphMvkOpHandler.cpp  SGraphMvkOpHandler.h
src/simplegraph/: SimpleGraph.cpp  SimpleGraph.h  SimpleGraph_Iterators.cpp  SimpleGraph_Operations.cpp  Timestamp.cpp  Timestamp.h
src/utils/: UUIDGenerator.cpp  cJSON.cpp  utils.cpp  utils.h
tests/mvk/: Test_MVKWrapper.cpp  Test_MvkWrapper.cpp
tests/simplegraph/: Test_SimpleGraph.cpp  Test_SimpleGraph_Operations.cpp  Test_Timestamp.cpp
